# swagger/v1/swagger.yaml
@@ -81,6 +81,11 @@ components:
           type: string
         updated_at:
           type: string
+  securitySchemes:
+    api_key:
+      type: apiKey
+      name: X-Api-Key
+      in: header
 paths:
   "/movies":
     get:
@@ -119,6 +124,8 @@ paths:
       summary: List showings
       tags:
       - Showings
+      security:
+      - api_key: []
       responses:
         '200':
           description: Showing list
@@ -132,6 +139,8 @@ paths:
       summary: Create showing
       tags:
       - Showings
+      security:
+      - api_key: []
       parameters: []
       responses:
         '201':
@@ -200,6 +209,8 @@ paths:
         required: true
         schema:
           type: integer
+      security:
+      - api_key: []
       responses:
         '200':
           description: Showing result
@@ -217,6 +228,8 @@ paths:
         required: true
         schema:
           type: integer
+      security:
+      - api_key: []
       responses:
         '200':
           description: Showing result
@@ -247,6 +260,8 @@ paths:
         required: true
     delete:
       summary: Delete showing
+      security:
+      - api_key: []
       tags:
       - Showings
       parameters:
